[package]
name = "lora"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license = "GPL-3.0-only"

[workspace]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
futuredsp = { path = "../../crates/futuredsp" }
futuresdr = { path = "../..", features = ["seify", "soapy"] }
num-traits = "0.2"
rustfft = "6.2"
scilib = "1.0"
semtech-udp = { version = "0.11.0", features = ["client"] }
triggered = "0.1.2"
tokio = { version = "1.38.1", features = ["rt-multi-thread"] }
structopt = "0.3.26"
chrono = "0.4.38"
