[package]
name = "lora"
version = "0.1.0"
edition = "2024"
readme = "./README.md"
license = "GPL-3.0-only"

[workspace]

[dependencies]
aes = "0.8"
anyhow = "1.0"
base64 = "0.22"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
ctr = "0.9"
futuredsp = { path = "../../crates/futuredsp" }
futuresdr = { path = "../..", features = ["seify", "soapy"] }
meshtastic = "0.1"
num-traits = "0.2"
rustfft = "6.3"
scilib = "1.0"
semtech-udp = { version = "0.12", features = ["client"] }
triggered = "0.1"
tokio = { version = "1", features = ["rt-multi-thread"] }
structopt = "0.3"
strum_macros = "0.26.4"
strum = "0.26.3"
rand = "0.9.0"
