[package]
name = "wlan"
version = "0.1.0"
edition = "2021"
default-run = "loopback"

[workspace]

[[bin]]
name = "rx"
path = "src/bin/rx.rs"
required-features = ["aaronia_http"]

[[bin]]
name = "loopback_hw"
path = "src/bin/loopback_hw.rs"
required-features = ["aaronia_http"]

[[bin]]
name = "loopback"
path = "src/bin/loopback.rs"

[[bin]]
name = "tx"
path = "src/bin/tx.rs"
required-features = ["aaronia_http"]

[[bin]]
name = "aaronia"
path = "src/bin/aaronia.rs"
required-features = ["aaronia"]

[[bin]]
name = "uav"
path = "src/bin/uav.rs"

[features]
default = ["soapy"]
aaronia = ["futuresdr/aaronia"]
aaronia_http = ["futuresdr/aaronia_http"]
soapy = ["futuresdr/soapy"]

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
crc32fast = "1.3.2"
futuresdr = { path = "../..", features = ["seify"] }
rand = "0.8.5"
rand_distr = "0.4.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1"
gloo-net = "0.4"
leptos = { version = "0.5", features = ["csr", "nightly"] }
log = { version = "0.4" }
prophecy = { path = "../../crates/prophecy" }
serde_json = "1.0"
seify = { version = ">=0.9.0", features = ["aaronia_http"] }
